--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,7 @@ a {
     color: white;
 }
 
-a:link {
-    text-decoration: none;
-    color: white;
-}
-
 a:visited {
-    text-decoration: none;
     color: white;
 }
 
@@ -52,8 +46,16 @@ header {
     color: white;
     border-bottom: 4px solid white;
     background-color: rgba(12, 0, 23, 0.8);
+    transition:all .3s
 }
 
+.nav-up {
+
+    top: -100px;
+
+    transition:0.2s;
+
+}
 .logo {
     margin-top: 30px;
     margin-left: 30px;
@@ -88,6 +90,10 @@ header {
 button:hover {
     background-color: white;
     color: #0C0017;
+}
+
+.main_link:hover {
+    color: #debaff;
 }
 
 .major_head {
@@ -161,10 +167,26 @@ button:hover {
     z-index: -1;
 }
 
+.main_text {
+    padding-top: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+.main_text_box {
+    width: 800px;
+    color: white;
+    font-family: 'Arvanav';
+    font-size: 26px;
+    line-height: 50px;
+    word-break: keep-all;
+}
 
-
-
+.main_h2 {
+    font-size: 36px;
+}
 
 
 
