--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,6 @@ header {
     transition:all .3s
 }
 
-.nav-up {
-
-    top: -100px;
-
-    transition:0.2s;
-
-}
 .logo {
     margin-top: 30px;
     margin-left: 30px;
@@ -105,10 +98,24 @@ button:hover {
 }
 
 .major_head svg{
-    
     margin-top: 200px;
     padding: 20px;
     background-color: #0C0017;
+}
+
+.loading {
+    background-color: #0C0017;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 10000;
+}
+
+.loading svg{
 }
 
 .swiper-container {
