--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,18 @@ header {
     margin-left: 30px;
 }
 
+.list_hd {
+    margin-top: -40px;
+    margin-right: 30px;
+    text-align: right;
+}
+
+.top_hd {
+    margin-top: -40px;
+    margin-right: 180px;
+    text-align: right;
+}
+
 .clear {
     position: absolute;
     top: 100%;
@@ -86,6 +98,14 @@ button:hover {
 }
 
 .main_link:hover {
+    color: #debaff;
+}
+
+.list_link:hover {
+    color: #debaff;
+}
+
+.top_link:hover {
     color: #debaff;
 }
 
@@ -195,11 +215,27 @@ button:hover {
     font-size: 36px;
 }
 
+.draw_bg {
+    padding-top: 200px;
+    padding-bottom: 60px;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Arvanav';
+}
 
+.drag {
+    padding-bottom: 60px;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Arvanav';
+}
 
-
-
-
-
+h5 {
+    text-align: center;
+    font-size: 14px;
+    padding: 80px 0 20px;
+}
 
 
