--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h3 {
     color: white;
     text-align: center;
     font-family: 'Arvanav';
+    padding-top: 20px
 }
 
 h2 {
@@ -47,6 +48,10 @@ header {
     border-bottom: 4px solid white;
     background-color: rgba(12, 0, 23, 0.8);
     transition:all .3s
+}
+
+.card_num {
+    padding-bottom: 10px;
 }
 
 .logo {
@@ -139,7 +144,7 @@ button:hover {
 }
 
 .swiper-container {
-    width: 50%;
+    width: 70%;
     margin: 400px auto 200px auto;
 }
 
@@ -158,7 +163,7 @@ button:hover {
 }
 
 .card_img {
-    width: 500px;
+    width: 400px;
 }
 
 .card_list {
@@ -166,11 +171,12 @@ button:hover {
 }
 
 .card_all {
-    width: 1200px;
+    width: 1180px;
     margin: 20px auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-row-gap: 30px;
+    grid-column-gap: 20px;
 }
 
 .card_box {
@@ -180,7 +186,7 @@ button:hover {
 }
 
 .card_box_img {
-    width: 300px;
+    width: 280px;
 }
 
 .card_name {
@@ -238,4 +244,8 @@ h5 {
     padding: 80px 0 20px;
 }
 
-
+.imgBx {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
