--- a/css/detailphone.css
+++ b/css/detailphone.css
@@ -57,6 +57,7 @@
 
 .card_box_img {
     width: 80px;
+    height: 138.39px;
 }
 
 
@@ -140,6 +141,7 @@ button {
 
 .card_img {
     width: 280;
+    height: 484.39px;
 }
 
 h3 {
